[tool.poetry]
name = "foocat_mpj"
version = "0.1.0"
description = "convert distances"
authors = ["Manish Joshi <50636000+ManishPJoshi@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
